# inverter-api

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
example/: white.pptx
src/: main.py
src/inverter_api/: __init__.py
